<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    android:orientation="horizontal"
    tools:context="com.example.tamara.smartangrybirds.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#496512"
        android:textSize="40sp"
        android:textStyle="bold|italic"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/math"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="30dp"
        android:layout_weight="1"
        android:background="@drawable/button_green2"
        android:clickable="true"
        android:onClick="math"
        android:paddingLeft="20dp"
        android:paddingRight="15dp"
        android:text="@string/math"
        android:textColor="@color/white"
        android:textAlignment="center"

        android:textStyle="italic"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_green2"
        android:clickable="true"
        android:onClick="alphabet"
        android:paddingLeft="5dp"
        android:textColor="@color/white"
        android:paddingRight="5dp"
        android:text="@string/alpha"

        android:textStyle="italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/math" />

    <Button
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_green2"
        android:clickable="true"
        android:onClick="games"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/hang"
        android:textColor="@color/white"
        android:textStyle="italic"
        app:layout_constraintHorizontal_bias="0.515"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_green2"
        android:clickable="true"
        android:textColor="@color/white"
        android:onClick="movie"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/movie"
        android:textStyle="italic"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

</android.support.constraint.ConstraintLayout>
